Backport Random Loot 2 to Minecraft 1.12.2 Forge
- Convert from NeoForge 1.21.11 to Forge 1.12.2 (14.23.5.2860)
- Replace DataComponents with NBT-based storage (LootNBT.java)
- Port all 39 modifiers with 1.12.2 API translations
- Implement dynamic texture system with ItemPropertyGetter
- Add anvil recipe handler for trait modification (30 XP cost)
- Add loot table injection for dungeon chests
- Update build system to RetroFuturaGradle 1.4.1
- Fix stat tracking for goodness progression
- Convert lang files from JSON to .lang format